--- a/index.html
+++ b/index.html
@@ -177,25 +177,25 @@
             </div>
             <div class="work-grid">
                 <div class="work-item">
-                    <img src="/Asset/templates/landing-page-1.svg" alt="Project 1">
+                    <img src="Asset/templates/landing-page-1.svg" alt="Project 1">
                     <div class="work-overlay">
                         <h3>Template 1</h3>
                     </div>
                 </div>
                 <div class="work-item">
-                    <img src="/Asset/templates/landing-page-4.svg" alt="Project 2">
+                    <img src="Asset/templates/landing-page-4.svg" alt="Project 2">
                     <div class="work-overlay">
                         <h3>Template 2</h3>
                     </div>
                 </div>
                 <div class="work-item">
-                    <img src="/Asset/templates/landing-page-5.svg" alt="Project 3">
+                    <img src="Asset/templates/landing-page-5.svg" alt="Project 3">
                     <div class="work-overlay">
                         <h3>Template 3</h3>
                     </div>
                 </div>
                 <div class="work-item">
-                    <img src="/Asset/templates/landing-page-6.svg" alt="Project 4">
+                    <img src="Asset/templates/landing-page-6.svg" alt="Project 4">
                     <div class="work-overlay">
                         <h3>Template 4</h3>
                     </div>
@@ -209,7 +209,7 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-image">
-                    <img src="/Asset/bussiness.jpg" alt="About Techncy">
+                    <img src="Asset/bussiness.jpg" alt="About Techncy">
                     <div class="shape"></div>
                 </div>
                 <div class="about-text">
