--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
             <span>Scroll Down</span>
             <div class="line"></div>
         </div>
+        <div class="canvas-container" id="canvas">
+            <!-- 3D-like elements animated with GSAP -->
+            <div class="circle circle-1"></div>
+            <div class="circle circle-2"></div>
+            <div class="floating-object object-1"></div>
+            <div class="floating-object object-2"></div>
+            <div class="floating-object object-3"></div>
+        </div>
     </section>
 
     <!-- Services Section -->
@@ -300,6 +308,7 @@
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.157.0/three.min.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
