--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ Cal("init", "30min", {origin:"https://cal.com"});
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-  <script src="script.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
