--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil:opsz,wght@10..72,100..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="index.css">
-  <img src="Asset/logo.png" alt="Logo" style="width:0px; height:0px;"/>
+  <img src="Asset/logo.png" style="width:0px; height:0px;"/>
 
 </head>
 
