--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <nav>
       <a href="#unique-section">Distinctive</a>
       <a href="#photo-gallery">Outcomes</a>
+      <a href="/chai.html">chai</a>
       <a href="#provide">Provision</a>
     </nav>
     <button class="btn"><a href="https://cal.com/sparshjain/30min">Book a Call</a></button>
