--- a/index.html
+++ b/index.html
@@ -17,253 +17,7 @@
 </head>
 
 <body>
-
-  <!-- Header -->
-  <header>
-    <div class="logo">Techncy.site</div>
-    <img src="Asset/logo.png" style="width:0px; height:0px;"/>
-    <nav>
-      <a href="#unique-section">Distinctive</a>
-      <a href="#photo-gallery">Outcomes</a>
-      <a href="#provide">Provision</a>
-    </nav>
-    <button class="btn"><a href="https://cal.com/sparshjain/30min">Book a Call</a></button>
-    <div class="menu-toggle" onclick="toggleMenu()">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-  </header>
-
-  <div class="mobile-menu" id="mobileMenu">
-    <a href="#unique-section">Distinctive</a>
-      <a href="#photo-gallery">Outcomes</a>
-      <a href="#provide">Provision</a>
-  </div>
-  <!-- /* Main sections */ -->
-  <section class="hero">
-    <div class="tagline">Techncy.site – Powering Your Online Presence</div>
-    <h1 class="headline">We Build More Than Websites<br><span class="headlinespan">
-        We Build Brands That Lead.</span></h1>
-    <p class="subtext">
-      Your website is your digital first impression — we make it bold, seamless, and built to convert.
-      We don’t just design pages; we craft experiences that spark trust, engagement, and action.
-      Whether you’re launching a brand or scaling one, your online presence should do more than exist — it should
-      perform.
-      Let’s turn clicks into clients and visitors into loyal fans.
-    </p>
-    <a href="https://cal.com/sparshjain/30min" class="cta-button">Book a 15 min call →</a>
-  </section>
-
-  <!-- Photo Gallery Section -->
-  <section class="photo-gallery" id="photo-gallery">
-    <div class="gallery-container">
-      <div class="photo-item">
-        <img src="Asset/landing-page-5.svg" alt="Branding work">
-      </div>
-
-      <div class="photo-item">
-        <img src="Asset/landing-page-2.svg">
-      </div>
-      <div class="photo-item">
-        <img src="Asset/Screenshot 2025-04-10 203454.png" alt="Website design">
-      </div>
-      <div class="photo-item">
-        <img src="Asset/Screenshot 2024-07-20 201318.png">
-      </div>
-      <div class="photo-item">
-        <img src="Asset/landing-page-3.svg">
-      </div>
-      <div class="photo-item">
-        <img src="Asset/landing-page-4.svg">
-      </div>
-  </section>
-
-  <section class="service-section">
-    <div class="service-left">
-      <div class="highlight-box">
-        <h2><span>Built Right. </span><br> Designed to Win.</h2>
-        <p>
-          From design to launch, we make sure your site looks great, works fast, and grows your business.🚀
-        </p>
-        <button class="cta-button"><a href="https://cal.com/sparshjain/30min">BOOK A CALL</a></button>
-      </div>
-    </div>
-    <div class="service-right">
-      <ul>
-        <li>End-to-End Web Development</li>
-        <li>Custom Website Design</li>
-        <li>Landing Page</li>
-        <li>E-commerce Website</li>
-        <li>Website Optimization</li>
-        <li>SEO (Search Engine Optimization)</li>
-        <li>Only At TECHNCY.SITE</li>
-      </ul>
-    </div>
-  </section>
-
-  <h2>Driven by real outcomes.</h2>
-
-  <div class="card-container" id="provide">
-    <div class="card">
-      <div class="card-icon">↩️</div>
-      <h3>End-to-End Service</h3>
-      <p>From ideation to launch, we handle every step of your website’s journey, ensuring a seamless process.</p>
-    </div>
-
-    <div class="card">
-      <div class="card-icon">✅</div>
-      <h3>Budget-Friendly Packages</h3>
-      <p>No hidden fees. We offer clear and upfront pricing, so you know exactly what you’re investing in.</p>
-    </div>
-
-    <div class="card">
-      <div class="card-icon">📈</div>
-      <h3>Long-Term Partnership</h3>
-      <p>Our work doesn’t stop at launch. We continually optimize your website to stay ahead of the competition.</p>
-    </div>
-  </div>
-
-
-  <div class="centrica">How's Start</div>
-
-  <div class="starting">
-
-    <div class="containerc">
-      <h1>See what you can expect.</h1>
-
-      <div class="cardc card-planning">
-        <div class="content">
-          <h2>Planning & Design</h2>
-          <p>We start by understanding your brand and goals, followed by creating a design tailored to your vision.</p>
-        </div>
-      </div>
-
-      <div class="cardc card-development">
-        <div class="content">
-          <h2>Development</h2>
-          <p>Our team brings the design to life with clean, efficient code, ensuring your website is fast and scalable.
-          </p>
-        </div>
-      </div>
-
-      <div class="cardc card-seo">
-        <div class="content">
-          <h2>Optimization & SEO</h2>
-          <p>We optimize for performance and implement SEO best practices to ensure your website ranks and performs
-            well.</p>
-        </div>
-      </div>
-      <div class="cardc card-launch">
-        <div class="content">
-          <h2>Launch & Support</h2>
-          <p>After launching, we continue to optimize and provide support to ensure long-term success.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="unique-section" id="unique-section">
-    <h1>What makes us unique?</h1>
-    <button class="cta-buttono"><a href="https://cal.com/sparshjain/30min">Book an Intro Call</a><span class="arrow">→</span>
-    </button>
-    <div class="comparison-cards-container">
-      <div class="comparison-cards">
-        <div class="cardp with-brand">
-          <div class="badge blue">✔️ With Techncy.site</div>
-          <div class="card-content">
-            <h2>Expert Developer and Designer.</h2>
-            <p>Experience and expertise at your fingertips, ensuring exceptional design quality.</p>
-          </div>
-        </div>
-
-        <div class="cardp without-brand">
-          <div class="badge red">❌ Without Techncy.site</div>
-          <div class="card-content">
-            <h2>Junior Developer and Designer.</h2>
-            <p>Inexperienced designers may compromise on quality and attention to detail.</p>
-          </div>
-        </div>
-      </div>
-      <div class="comparison-cards">
-        <div class="cardp with-brand">
-          <div class="badge blue">✔️ With Techncy.site</div>
-          <div class="card-content">
-            <h2>Updates every 24-Hours.</h2>
-            <p>Regular progress and timely delivery, so you're always in the loop.</p>
-          </div>
-        </div>
-
-        <div class="cardp without-brand">
-          <div class="badge red">❌ Without Techncy.site</div>
-          <div class="card-content">
-            <h2>Slow & Rushed Work.</h2>
-            <p>Delays and rushed deliveries can impact your project's overall success.</p>
-          </div>
-        </div>
-      </div>
-      <div class="comparison-cards">
-        <div class="cardp with-brand">
-          <div class="badge blue">✔️ With Techncy.site</div>
-          <div class="card-content">
-            <h2>Cost Efficient.</h2>
-            <p>Transparent pricing and optimized resources for maximum value.</p>
-          </div>
-        </div>
-
-        <div class="cardp without-brand">
-          <div class="badge red">❌ Without Techncy.site</div>
-          <div class="card-content">
-            <h2>Never-ending Invoices.</h2>
-            <p>Unclear pricing and hidden costs can drain your budget & your bank</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="talk">
-<h1>Let’s talk about your next big move
-</h1>
-<!-- Cal inline embed code begins -->
-<div style="width:100%;height:100%;overflow:scroll" id="my-cal-inline"></div>
-<script type="text/javascript">
-  (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if(typeof namespace === "string"){cal.ns[namespace] = cal.ns[namespace] || api;p(cal.ns[namespace], ar);p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
-Cal("init", "30min", {origin:"https://cal.com"});
-
-  Cal.ns["30min"]("inline", {
-    elementOrSelector:"#my-cal-inline",
-    config: {"layout":"month_view"},
-    calLink: "sparshjain/30min",
-  });
-
-  Cal.ns["30min"]("ui", {"hideEventTypeDetails":false,"layout":"month_view"});
-  </script>
-  <!-- Cal inline embed code ends -->
-
-  </div>
-
-  <!-- Footer -->
-  <footer>
-    <div class="container">
-      <div class="footer-content">
-        <div class="footer-logo">Techncy.site</div>
-        <div class="social-links">
-          <a href="https://x.com/Sparsh__Jain_?t=uOKc6mEh_pqjVqNgkyRSKQ&s=09"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.instagram.com/techncy.site/"><i class="fab fa-instagram"></i></a>
-          <a
-            href="https://www.linkedin.com/in/sparsh-prachandia-jain-941115317?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
-              class="fab fa-linkedin-in"></i></a>
-        </div>
-      </div>
-      <div class="copyright">
-        © 2025 Techncy. All Rights Reserved.
-      </div>
-    </div>
-  </footer>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-  <script src="index.js"></script>
+the developer died
 </body>
 
 </html>
