--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
             </div>
             <div class='ui-grid'>
                 <div class='ui-box'>
-                    <h1 class='title' slot='content'><span>Science <em>Fiction</span></em></h1>
+                    <h1 class='title' slot='content'><span>UNDER <em>CONSTRUCTION </span></em></h1>
+                    <h1 class='title' slot='content'><span>PLZ <em>WAIT.. </span></em></h1>
                     <div class='ui-fx'>
                         <div class='ui-inner-border l'></div>
                         <div class='ui-inner-border r'></div>
