--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil:opsz,wght@10..72,100..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="index.css">
+  <link rel="icon" href="favicon.ico" type="Asset/logo.png">
 </head>
 
 <body>
@@ -261,7 +262,7 @@ Cal("init", "30min", {origin:"https://cal.com"});
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-  <script src="script.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
