--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       Let’s turn clicks into clients and visitors into loyal fans.
     </p>
     <a href="https://cal.com/sparshjain/30min" class="cta-button">Book a 15 min call →</a>
+     <img src="Asset/logo.png" style="display:none">
   </section>
 
   <!-- Photo Gallery Section -->
