--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <nav>
     <a href="#unique-section">Distinctive</a>
     <a href="#photo-gallery">Outcomes</a>
+      <a href="https://labs.techncy.site/">Labs</a>
     <a href="#provide">Provision</a>
     </nav>
     <button class="btn"><a href="https://cal.com/sparshjain/30min">Book a Call</a></button>
