--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ Cal("init", "30min", {origin:"https://cal.com"});
         <div class="footer-logo">Techncy.site</div>
         <div class="social-links">
           <a href="https://x.com/Sparsh__Jain_?t=uOKc6mEh_pqjVqNgkyRSKQ&s=09"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.instagram.com/i_sparsh_i?igsh=ZDQ0ODU4cG03bnU0"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/sparsh_22_11?igsh=dTh6YTVwaHIwc3B4"><i class="fab fa-instagram"></i></a>
           <a
             href="https://www.linkedin.com/in/sparsh-prachandia-jain-941115317?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
               class="fab fa-linkedin-in"></i></a>
